# vach

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  me.vach  rustfmt.toml  test.ach  vach-mimetype.xml  vach-xdg-mimetype.xml
.github/workflows/: publish.yml  release.yml  rust.yml  test-cli.yaml  tests.yml
crates/c-bindings/: Cargo.toml  bindings.h  build.rs
crates/c-bindings/src/: errors.rs  lib.rs  reader.rs  sample.c  writer.c  writer.rs
crates/vach/: Cargo.toml
crates/vach-benchmarks/: Cargo.toml
crates/vach-benchmarks/benches/: main.rs
crates/vach-cli/: Cargo.toml  README.md
crates/vach-cli/spec/: main.txt
crates/vach-cli/src/: main.rs
crates/vach-cli/src/app/: mod.rs
crates/vach-cli/src/commands/: keypair.rs  list.rs  mod.rs  pack.rs  pipe.rs  unpack.rs  verify.rs
crates/vach-cli/src/keys/: mod.rs
crates/vach-cli/src/utils/: mod.rs
crates/vach-cli/test_data/: GamerProfile.xml  test.sh
crates/vach/src/: c-api.rs  capi.rs  crypto.rs  lib.rs  tests.rs
crates/vach/src/crypto_utils/: mod.rs
crates/vach/src/global/: compressor.rs  error.rs  flags.rs  header.rs  mod.rs  reg_entry.rs
crates/vach/src/loader/: archive.rs  mod.rs  resource.rs
crates/vach/src/writer/: config.rs  leaf.rs  mod.rs
crates/vach/test_data/: bee.script  pair.pub
spec/: main.txt  priorities.txt
src/: lib.rs  main.rs
src/file/: mod.rs
src/global/: flags.rs  header.rs  mod.rs  registry.rs  storage.rs  types.rs
src/loader/: archive.rs  header.rs  mod.rs  registry.rs  resource.rs
src/tests/: global.rs  mod.rs  writer.rs
src/writer/: leaf.rs  mod.rs
src/writer/builder/: config.rs  mod.rs
src/writer/leaf/: config.rs  mod.rs
test_data/: me.vach  pair.pub
test_data/signed/: target.vach
test_data/simple/: target.vach
vach/: .gitignore  Cargo.toml  README.md
vach-assets-manager/: Cargo.toml
vach-assets-manager/src/: lib.rs
vach-assets-manager/test-data/music/: data.pkg
vach-benchmarks/: Cargo.toml
vach-benchmarks/benches/: main.rs
vach-cli/: Cargo.toml  README.md
vach-cli/spec/: main.txt
vach-cli/src/: config.rs  main.rs
vach-cli/src/app/: mod.rs
vach-cli/src/commands/: keypair.rs  list.rs  mod.rs  open.rs  pack.rs  package.rs  repack.rs  split.rs  unpack.rs  verify.rs
vach-cli/src/keys/: mod.rs
vach-cli/src/utils/: mod.rs
vach-cli/test_data/: GamerProfile.xml  bot.js  keypair.kp  keypair.pk  keypair.sk  target.vach  target2.vach  test.sh
vach-cli/test_data/lolcalt/: meow
vach/benches/: benchmark.rs
vach/src/: crypto.rs  lib.rs  tests.rs
vach/src/crypto_utils/: mod.rs
vach/src/global/: compressor.rs  container.rs  edcryptor.rs  error.rs  flags.rs  header.rs  mod.rs  reg_entry.rs  registry.rs  result.rs  types.rs
vach/src/global/compressor/: mod.rs
vach/src/loader/: archive.rs  resource.rs
vach/src/tests/: global.rs  mod.rs
vach/src/utils/: mod.rs
vach/src/writer/: compress_mode.rs  config.rs  leaf.rs  mod.rs  prepared.rs
vach/src/writer/builder/: config.rs  mod.rs
vach/test_data/: bee.script  pair.pub  poem.txt  song.txt
vach/test_data/encrypted/: target.vach
vach/test_data/signed/: target.vach
vach/test_data/simple/: target.vach
vf/: Cargo.toml
virtfs/: Cargo.toml
virtfs-ach/: Cargo.toml
virtfs-ach/src/: lib.rs  main.rs
virtfs-ach/src/global/: header.rs  mod.rs  registry.rs
virtfs-ach/src/loader/: mod.rs
virtfs-ach/src/tests/: global.rs  mod.rs  writer.rs
virtfs-ach/src/writer/: mod.rs
virtfs-ach/test-data/: data.txt  ipsum.txt  key.prv  key.pub  lorem_ipsum.txt  test.ach
