[package]
name = "vach"
version = "0.1.0"
edition = "2018"

# TODO: 
	# Archives don't need to be mutable to allow reading, use Rc
	# Resource to not store the data in a vector rather they store it in an impl Read
	# impl Iter and Stream dunctionality for Archives
	# Remove #[allow(unused)]
	# Add a simple API to handle keypairs
	# Consider changing to crc32fast, easier to use, faster and has less dependancies less errors, faster compile time
	# pub(crate) everywhere
	# No key passed no verification is done
	# Use serde someplace
	# Benchmark BufReaders and BufWriters
	# Prevent verification of signatures every time a fetch is done?
	# Arcive::config should validate the Registry signature

[dependencies]
anyhow = "1.0.42"
ed25519-dalek = "1.0.1"
lz4_flex = "0.8.2"
rand = "0.7.0"
hashbrown = "0.11.2"
bitflags = "1.3.2"