[package]
name = "vach"
version = "0.1.0"
edition = "2018"

# TODO: 
	# impl Iter and Stream dunctionality for Archives
	# Add a simple API to handle keypairs
	# Switch hashing function to blake3
	# Reduce the number of reads and instead use in-memory buffers
	# pub(crate) everywhere
	# Optional signatures
	# Use serde someplace
	# Benchmark BufReaders and BufWriters
	# Arcive::config should validate the Registry signature
	# Ask about storing paths as hashes, secure mode

[dependencies]
anyhow = "1.0.42"
ed25519-dalek = "1.0.1"
lz4_flex = "0.8.2"
rand = "0.7.0"
hashbrown = "0.11.2"
bitflags = "1.3.2"