[package]
name = "vach"
version = "0.1.3"
edition = "2018"

# TODO: 
	# Add a simple API to generate keypairs
	# A simple way to load aand add flags, to and from the Header and RegistryEntry
	# Optimize the builder for memory not for speed
	# Use streams and abstain from buffereing with vectors

[dependencies]
anyhow = "1.0.42"
ed25519-dalek = "1.0.1"
lz4_flex = "0.8.2"
rand = "0.7.0"
hashbrown = "0.11.2"
bitflags = "1.3.2"

[profile.release]
lto = true