[package]
name = "vach-assets-manager"
version = "0.1.0"
edition = "2018"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>", "Newton Toto <nyachiengatoto@gmail.com>"]
description = "This crate enables the use of `vach` archives with `assets-manager`"
license = "MIT"
homepage = "https://github.com/zeskeertwee/vach"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
