[package]
name = "vach-assets-manager"
version = "0.1.0"
edition = "2018"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>", "Newton Toto <nyachiengatoto@gmail.com>"]
description = "This crate enables the use of `vach` archives with `assets-manager`"
license = "MIT"
homepage = "https://github.com/zeskeertwee/vach"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets_manager = "0.7.1"
vach = "0.2.3"
parking_lot = "0.11.2"
ahash = "0.7.6"
walkdir = "2.3.2"
pathdiff = "0.2.1"
log = "0.4.14"
env_logger = "0.9.0"