[package]
name = "vach-cli"
version = "0.3.6"
edition = "2021"
authors = [
	"Jasper Fortuin <zeskeertwee@gmail.com>",
	" Newton Toto <nyachiengatoto@gmail.com>",
]
description = "A command-line tool to work with .vach files"
license = "MIT"
repository = "https://github.com/zeskeertwee/vach"
categories = ["command-line-utilities", "encoding", "game-development"]
keywords = ["archive", "command-line", "vach", "assets", "game"]
readme = "README.md"
include = ["src/*", "Cargo.toml", "../README.md"]

[[bin]]
name = "vach"
path = "src/main.rs"

[dependencies]
indicatif = "0.16.2"
clap = "3.0.5"
anyhow = "1.0.44"
tabled = "0.5.0"
log = "0.4.14"
vach = { version = "0.3.5", features = ["compression", "multithreaded"] }
walkdir = "2.3.2"
pretty_env_logger = "0.4.0"
term_size = "0.3.2"
num_cpus = "1.13.1"
