[package]
name = "vach-cli"
version = "0.5.6"
edition = "2021"
authors = [
	"Jasper Fortuin <zeskeertwee@gmail.com>",
	" Newton Toto <nyachiengatoto@gmail.com>",
]
description = "A command-line tool to work with .vach files"
license = "MIT"
repository = "https://github.com/zeskeertwee/vach"
categories = ["command-line-utilities", "encoding", "game-development"]
keywords = ["archive", "command-line", "vach", "assets", "game"]
readme = "README.md"
include = ["src/*", "Cargo.toml", "../README.md"]

[[bin]]
name = "vach"
path = "src/main.rs"

[dependencies]
vach = { version = "0.5.5", features = ["all"] }
clap = "3.1.15"
indicatif = "0.17.8"
anyhow = "1.0.81"
tabled = "0.15.0"
walkdir = "2.5.0"
term_size = "0.3.2"
