[package]
name = "vach"

# NOTE: Make sure spec.txt and vach::VERSION constants are all synced up
version = "0.3.5"

edition = "2021"
authors = [
	"Jasper Fortuin <zeskeertwee@gmail.com>",
	"Newton Toto <nyachiengatoto@gmail.com>",
]
description = "A simple archiving format, designed for storing assets in compact secure containers"
license = "MIT"
repository = "https://github.com/zeskeertwee/vach"
categories = ["games", "compression"]
keywords = ["archive", "filesystem", "compression", "game", "assets"]
documentation = "https://docs.rs/vach"
readme = "README.md"
include = ["Cargo.toml", "Cargo.lock", "src/*"]

[dependencies]
# Authentication dependencies
ed25519-dalek = { version = "1.0.1", optional = true }
rand = { version = "0.7.0", optional = true }

# Encryption dependencies
aes-gcm = { version = "0.9.4", features = ["aes"], optional = true }

# Compression dependencies
lz4_flex = { version = "0.9.0", optional = true }
snap = { version = "1.0.5", optional = true }
brotli = { version = "3.3.3", optional = true }

# Multithreaded feature
rayon = { version = "1.5.1", optional = true }
num_cpus = { version = "1.13.1", optional = true }

[features]
default = ["builder", "loader"]

loader = []
builder = []

crypto = ["ed25519-dalek", "aes-gcm", "rand"]
multithreaded = ["rayon", "num_cpus"]
compression = ["snap", "lz4_flex", "brotli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
