[package]
name = "vach"

# NOTE: Make sure spec.txt and vach::VERSION constants are all synced up
version = "0.4.5"

edition = "2021"
authors = [
	"Jasper Fortuin <zeskeertwee@gmail.com>",
	"Newton Toto <nyachiengatoto@gmail.com>",
]
description = "A simple archiving format, designed for storing assets in compact secure containers"
license = "MIT"
repository = "https://github.com/zeskeertwee/vach"
categories = ["games", "compression"]
keywords = ["archive", "filesystem", "compression", "game", "assets"]
documentation = "https://docs.rs/vach"
readme = "README.md"
include = ["Cargo.toml", "Cargo.lock", "src/*"]

[dependencies]
thiserror = "1.0.31"

# Authentication dependencies
ed25519-dalek = { version = "1.0.1", optional = true }
rand = { version = "0.8.5", optional = true }

# Encryption dependencies
aes-gcm = { version = "0.10.2", features = ["aes"], optional = true }

# Compression dependencies
lz4_flex = { version = "0.11.1", optional = true, default-features = false, features = [
	"frame",
] }
snap = { version = "1.0.5", optional = true }
brotli = { version = "3.3.4", optional = true }

# Multithreaded features
parking_lot = { version = "0.12.1" }
rayon = { version = "1.5.2", optional = true }

[features]
default = ["builder", "archive"]

archive = []
builder = []

crypto = ["ed25519-dalek", "aes-gcm", "rand"]
multithreaded = ["rayon"]
compression = ["snap", "lz4_flex", "brotli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
