[package]
name = "vach"

# NOTE: Make sure spec.txt and vach::VERSION constants are all synced up
version = "0.5.2"

edition = "2021"
authors = [
	"Jasper Fortuin <zeskeertwee@gmail.com>",
	"Newton Toto <nyachiengatoto@gmail.com>",
]
description = "A simple archiving format, designed for storing assets in compact secure containers"
license = "MIT"
repository = "https://github.com/zeskeertwee/vach"
categories = ["games", "compression"]
keywords = ["archive", "filesystem", "compression", "game", "assets"]
documentation = "https://docs.rs/vach"
readme = "README.md"
include = ["Cargo.toml", "Cargo.lock", "src/*"]

[dependencies]
thiserror = "1.0.56"

# Authentication dependencies
ed25519-dalek = { version = "2.1.0", optional = true }
rand = { version = "0.8.5", optional = true }

# Encryption dependencies
aes-gcm = { version = "0.10.3", features = ["aes"], optional = true }

# Compression dependencies
lz4_flex = { version = "0.11.1", optional = true, default-features = false, features = [
	"frame",
] }
snap = { version = "1.1.1", optional = true }
brotli = { version = "3.4.0", optional = true }

# Multithreaded features
parking_lot = { version = "0.12.1" }
rayon = { version = "1.8.0", optional = true }

# Jemalloc
tikv-jemallocator = { version = "0.5.0", optional = true }

[features]
default = ["builder", "archive"]
all = ["default", "compression", "crypto", "multithreaded", "tikv-jemallocator"]

archive = []
builder = []

crypto = ["ed25519-dalek", "aes-gcm", "rand"]
multithreaded = ["rayon"]
compression = ["snap", "lz4_flex", "brotli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
