[package]
name = "ach"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>", "Newton Toto <nyachiengatoto@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
ed25519-dalek = "1.0.1"
signature = "1.3.1"
lz4_flex = "0.8.2"
rand = "0.7.0"
log = "0.4.14"

[dev-dependencies]
pretty_env_logger = "0.4.0"