[package]
name = "vach-benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
criterion = "0.5.1"
vach = { path = "../vach", features = [
	"builder",
	"archive",
	"crypto",
	"compression",
] }

[[bench]]
name = "benchmark"
harness = false
path = "benches/main.rs"
