[package]
name = "vach-cli"
version = "0.7.1"
edition = "2021"
authors = [
	"Jasper Fortuin <zeskeertwee@gmail.com>",
	"Newton Toto <nyachiengatoto@gmail.com>",
]
description = "A command-line tool to work with .vach files"
license = "MIT"
repository = "https://github.com/zeskeertwee/vach"
categories = ["command-line-utilities", "encoding", "game-development"]
keywords = ["archive", "command-line", "vach", "assets", "game"]
readme = "README.md"
include = ["src/*", "Cargo.toml", "../README.md"]

[[bin]]
name = "vach"
path = "src/main.rs"

[dependencies]
vach = { version = "0.7", features = ["all"] }
num_cpus = "1"
clap = "3.1.15"
indicatif = "0.17"
anyhow = "1"
tabled = "0.18"
walkdir = "2"
tempfile = "3"
memmap2 = "0.9.5"
